Updated header links to have underlines when hovering, set up the playlist page and added a few tracks, added a quote to the helpful tools page.

--- a/help.html
+++ b/help.html
@@ -15,7 +15,7 @@
         <h1>Self Improvement Through Music</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="tracklist.html">Tracklist</a>
+            <a href="tracklist.html">Playlist</a>
             <a href="help.html">Helpful Tools</a>
             <a href="recommendations.html">Recommendations</a>
         </nav>
@@ -23,6 +23,7 @@
 
     <main>
         <p>Coming soon.</p>
+        <p>It ain't what you don't know that gets you into trouble. It's what you know for sure that just ain't so. - Mark Twain</p>
     </main>
 
     <footer>
