--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Self Improvement Through Music</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="tracklist.html">Tracklist</a>
+            <a href="tracklist.html">Playlist</a>
             <a href="help.html">Helpful Tools</a>
             <a href="recommendations.html">Recommendations</a>
         </nav>
