Added small feature to the website titles, added more tracks to playlist

--- a/tracklist.html
+++ b/tracklist.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tracklist</title>
+    <title>SELF · Tracklist</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -104,137 +104,137 @@
         </div>
 
         <div class="track">
-            <a href="" target="_blank"><img src="images/track.png" alt="Image description"></a>
+            <a href="https://open.spotify.com/track/213x4gsFDm04hSqIUkg88w" target="_blank"><img src="images/track10_OnTopOfTheWorld.png" alt="On Top Of The World - Imagine Dragons"></a>
             <div class="track-content">
-                <h2>Title Goes Here</h2><br>
+                <h2>On Top Of The World - Imagine Dragons</h2><br>
                 <p>Description Coming Soon.</p>
             </div>
         </div>
 
         <div class="track">
-            <a href="" target="_blank"><img src="images/track.png" alt="Image description"></a>
+            <a href="https://open.spotify.com/track/6VS7wKwtvL2FvTupYSWZ9e" target="_blank"><img src="images/track11_Invincible.png" alt="Invincible - Aminé"></a>
             <div class="track-content">
-                <h2>Title Goes Here</h2><br>
+                <h2>Invincible - Aminé</h2><br>
                 <p>Description Coming Soon.</p>
             </div>
         </div>
 
         <div class="track">
-            <a href="" target="_blank"><img src="images/track.png" alt="Image description"></a>
+            <a href="https://open.spotify.com/track/1zB4vmk8tFRmM9UULNzbLB" target="_blank"><img src="images/track12_Thunder.png" alt="Thunder - Imagine Dragons"></a>
             <div class="track-content">
-                <h2>Title Goes Here</h2><br>
+                <h2>Thunder - Imagine Dragons</h2><br>
                 <p>Description Coming Soon.</p>
             </div>
         </div>
 
         <div class="track">
-            <a href="" target="_blank"><img src="images/track.png" alt="Image description"></a>
+            <a href="https://open.spotify.com/track/1sx0XsWUusUoPstbvokZjP" target="_blank"><img src="images/track13_AOK.png" alt="AOK - Tai Verdes"></a>
             <div class="track-content">
-                <h2>Title Goes Here</h2><br>
+                <h2>AOK - Tai Verdes</h2><br>
                 <p>Description Coming Soon.</p>
             </div>
         </div>
  
         <div class="track">
-            <a href="" target="_blank"><img src="images/track.png" alt="Image description"></a>
+            <a href="https://open.spotify.com/track/6OtCIsQZ64Vs1EbzztvAv4" target="_blank"><img src="images/track14_GoodLife.png" alt="Good Life - OneRepublic"></a>
             <div class="track-content">
-                <h2>Title Goes Here</h2><br>
+                <h2>Good Life - OneRepublic</h2><br>
                 <p>Description Coming Soon.</p>
             </div>
         </div>
 
         <div class="track">
-            <a href="" target="_blank"><img src="images/track.png" alt="Image description"></a>
+            <a href="https://open.spotify.com/track/4bEb3KE4mSKlTFjtWJQBqO" target="_blank"><img src="images/track15_DontStop.png" alt="Don't Stop - Fleetwood Mac"></a>
             <div class="track-content">
-                <h2>Title Goes Here</h2><br>
+                <h2>Don't Stop - Fleetwood Mac</h2><br>
                 <p>Description Coming Soon.</p>
             </div>
         </div>
 
         <div class="track">
-            <a href="" target="_blank"><img src="images/track.png" alt="Image description"></a>
+            <a href="https://open.spotify.com/track/7quOQh8W0GeUiBucG2uW5N" target="_blank"><img src="images/track16_WolvesOfWorry.png" alt="Wolves of Worry - Chance Peña"></a>
             <div class="track-content">
-                <h2>Title Goes Here</h2><br>
+                <h2>Wolves of Worry - Chance Peña</h2><br>
                 <p>Description Coming Soon.</p>
             </div>
         </div>
 
         <div class="track">
-            <a href="" target="_blank"><img src="images/track.png" alt="Image description"></a>
+            <a href="https://open.spotify.com/track/4RVbK6cV0VqWdpCDcx3hiT" target="_blank"><img src="images/track17_Reborn.png" alt="Reborn - Kanye West"></a>
             <div class="track-content">
-                <h2>Title Goes Here</h2><br>
+                <h2>Reborn - Kanye West</h2><br>
                 <p>Description Coming Soon.</p>
             </div>
         </div>
 
         <div class="track">
-            <a href="" target="_blank"><img src="images/track.png" alt="Image description"></a>
+            <a href="https://open.spotify.com/track/1obisQNOcikRvTdStbW3pG" target="_blank"><img src="images/track18_GoBigOrGoHome.png" alt="Go Big Or Go Home - American Authors"></a>
             <div class="track-content">
-                <h2>Title Goes Here</h2><br>
+                <h2>Go Big Or Go Home - American Authors</h2><br>
                 <p>Description Coming Soon.</p>
             </div>
         </div>
  
         <div class="track">
-            <a href="" target="_blank"><img src="images/track.png" alt="Image description"></a>
+            <a href="https://open.spotify.com/track/5xC8uOesnn0udeXAYlAnoY" target="_blank"><img src="images/track19_Alright.png" alt="Alright - I Should Coco"></a>
             <div class="track-content">
-                <h2>Title Goes Here</h2><br>
+                <h2>Alright - I Should Coco</h2><br>
                 <p>Description Coming Soon.</p>
             </div>
         </div>
 
         <div class="track">
-            <a href="" target="_blank"><img src="images/track.png" alt="Image description"></a>
+            <a href="https://open.spotify.com/track/4Jz4bjXeiF2SXVj9P4YfY5" target="_blank"><img src="images/track20_KeepYourHeadUp.png" alt="Keep Your Head Up - Andy Grammer"></a>
             <div class="track-content">
-                <h2>Title Goes Here</h2><br>
+                <h2>Keep Your Head Up - Andy Grammer</h2><br>
                 <p>Description Coming Soon.</p>
             </div>
         </div>
 
         <div class="track">
-            <a href="" target="_blank"><img src="images/track.png" alt="Image description"></a>
+            <a href="https://open.spotify.com/track/7GJ572zvnU94VZVrj5XRtb" target="_blank"><img src="images/track21_Spirits.png" alt="Spirits - The Strumbrellas"></a>
             <div class="track-content">
-                <h2>Title Goes Here</h2><br>
+                <h2>Spirits - The Strumbrellas</h2><br>
                 <p>Description Coming Soon.</p>
             </div>
         </div>
 
         <div class="track">
-            <a href="" target="_blank"><img src="images/track.png" alt="Image description"></a>
+            <a href="https://open.spotify.com/track/3SktMqZmo3M9zbB7oKMIF7" target="_blank"><img src="images/track22_Gravity.png" alt="Gravity - John Mayer"></a>
             <div class="track-content">
-                <h2>Title Goes Here</h2><br>
+                <h2>Gravity - John Mayer</h2><br>
                 <p>Description Coming Soon.</p>
             </div>
         </div>
 
         <div class="track">
-            <a href="" target="_blank"><img src="images/track.png" alt="Image description"></a>
+            <a href="https://open.spotify.com/track/0DGTcMqvVR7fmBXgiG6jz4" target="_blank"><img src="images/track23_JustACloudAway.png" alt="Just A Cloud Away - Pharrell Williams"></a>
             <div class="track-content">
-                <h2>Title Goes Here</h2><br>
+                <h2>Just A Cloud Away - Pharrell Williams</h2><br>
                 <p>Description Coming Soon.</p>
             </div>
         </div>
 
         <div class="track">
-            <a href="" target="_blank"><img src="images/track.png" alt="Image description"></a>
+            <a href="https://open.spotify.com/track/5r5cp9IpziiIsR6b93vcnQ" target="_blank"><img src="images/track24_WalkingOnADream.png" alt="Walking On A Dream - Empire Of The Sun"></a>
             <div class="track-content">
-                <h2>Title Goes Here</h2><br>
+                <h2>Walking On A Dream - Empire Of The Sun</h2><br>
                 <p>Description Coming Soon.</p>
             </div>
         </div>
 
         <div class="track">
-            <a href="" target="_blank"><img src="images/track.png" alt="Image description"></a>
+            <a href="https://open.spotify.com/track/22HYEJveCvykVDHDiEEmjZ" target="_blank"><img src="images/track25-Tupthumping.png" alt="Tubthumping - Chumbawamba"></a>
             <div class="track-content">
-                <h2>Title Goes Here</h2><br>
+                <h2>Tubthumping - Chumbawamba</h2><br>
                 <p>Description Coming Soon.</p>
             </div>
         </div>
 
         <div class="track">
-            <a href="" target="_blank"><img src="images/track.png" alt="Image description"></a>
+            <a href="https://open.spotify.com/track/6Ec5LeRzkisa5KJtwLfOoW" target="_blank"><img src="images/track26_AmIDreaming.png" alt="Am I Dreaming - Metro Boomin"></a>
             <div class="track-content">
-                <h2>Title Goes Here</h2><br>
+                <h2>Am I Dreaming - Metro Boomin</h2><br>
                 <p>Description Coming Soon.</p>
             </div>
         </div>
