Started helpful tools page

--- a/help.html
+++ b/help.html
@@ -22,8 +22,20 @@
     </header>
 
     <main>
-        <p>Coming soon.</p>
-        <p>It ain't what you don't know that gets you into trouble. It's what you know for sure that just ain't so. - Mark Twain</p>
+        <h1>Podcasts</h1><br>
+
+        <p>Coming Soon.</p>
+
+        <section class="books">
+            <h1>Books</h1><br>
+            <div class="book">
+                <p>Coming Soon.</p>
+            </div>
+        </section>
+
+        <h1>Quotes</h1><br>
+        <!-- <p>It ain't what you don't know that gets you into trouble. It's what you know for sure that just ain't so. - Mark Twain</p> -->
+        <p>Coming Soon.</p>
     </main>
 
     <footer>
