--- a/help.html
+++ b/help.html
@@ -35,6 +35,7 @@
 
         <h1>Quotes</h1><br>
         <!-- <p>It ain't what you don't know that gets you into trouble. It's what you know for sure that just ain't so. - Mark Twain</p> -->
+         <!-- <p>test</p> -->
         <p>Coming Soon.</p>
     </main>
 
