added the first podcast, book, and quote to the helpful tools page

--- a/help.html
+++ b/help.html
@@ -22,21 +22,30 @@
     </header>
 
     <main>
-        <h1>Podcasts</h1><br>
-
-        <p>Coming Soon.</p>
+        <section class="podcasts">
+            <H1>Podcasts</H1><br>
+            <div class="podcast">
+                <a href="https://open.spotify.com/show/706hylM6zaDW8LrrYxcggQ" target="_blank"><img src="images/podcasts/podcast1_TheMindsetMentor.png" alt="The Mindset Mentor - Rob Dial"></a>
+                <div class="podcast-content">
+                    <h2>The Mindset Mentor - Rob Dial</h2><br>
+                    <p><i>Description.</i></p>
+                </div>
+            </div>
+        </section><br>
 
         <section class="books">
             <h1>Books</h1><br>
             <div class="book">
-                <p>Coming Soon.</p>
+                <a href="https://josephnguyen.org/products/don-believe-everything-you-think-why-your-thinking-is-the-beginning-end-of-suffering?srsltid=AfmBOorDLpWgZ2gAw0kk2MP6nfR0JRGUK0JNxWZjVCwr7YogIhG-Hogi" target="_blank"><img src="images/books/book1_DontBelieveEverythingYouThink.png" alt="Don't Believe Everything You Think: Why Your Thinking Is The Beginning & End Of Suffering - Joseph Nguyen"></a>
+                <div class="book-content">
+                    <h2>Don't Believe Everything You Think: Why Your Thinking Is The Beginning & End Of Suffering - Joseph Nguyen</h2><br>
+                    <p><i>Description.</i></p>
+                </div>
             </div>
-        </section>
+        </section><br>
 
         <h1>Quotes</h1><br>
-        <!-- <p>It ain't what you don't know that gets you into trouble. It's what you know for sure that just ain't so. - Mark Twain</p> -->
-         <!-- <p>test</p> -->
-        <p>Coming Soon.</p>
+        <p>It ain't what you don't know that gets you into trouble. It's what you know for sure that just ain't so. - Mark Twain</p>
     </main>
 
     <footer>
