added descriptions to a few tracks, as well as the podcast and book, described what the recommendations page will be

--- a/recommendations.html
+++ b/recommendations.html
@@ -22,7 +22,7 @@
     </header>
 
     <main>
-        <p>Coming soon.</p>
+        <p>Coming soon. This page will allow users to send recommendations for songs, podcasts, books, quotes and more.</p>
     </main>
 
     <footer>
