--- a/help.html
+++ b/help.html
@@ -28,7 +28,7 @@
                 <a href="https://open.spotify.com/show/706hylM6zaDW8LrrYxcggQ" target="_blank"><img src="images/podcasts/podcast1_TheMindsetMentor.png" alt="The Mindset Mentor - Rob Dial"></a>
                 <div class="podcast-content">
                     <h2>The Mindset Mentor - Rob Dial</h2><br>
-                    <p><i>Description.</i></p>
+                    <p>This podcast is a self-development podcast that helps you change how you think so you can improve how you live. It focuses on practical mindset shifts, habits, and perspectives that support personal growth, emotional resilience, and long-term fulfillment. Each episode breaks down common mental roadblocks like fear, self-doubt, comparison, and overwhelm and offers clear, actionable ways to reframe them. You get tools for building confidence, managing stress, setting goals, improving discipline, and nurturing a healthier relationship with yourself. The podcast teaches that healing and improvement aren't about perfection but about consistent, intentional small steps that create lasting change. It supports you in taking responsibility for your inner world so your outer world becomes more aligned with your values and potential.</p>
                 </div>
             </div>
         </section><br>
@@ -39,13 +39,13 @@
                 <a href="https://josephnguyen.org/products/don-believe-everything-you-think-why-your-thinking-is-the-beginning-end-of-suffering?srsltid=AfmBOorDLpWgZ2gAw0kk2MP6nfR0JRGUK0JNxWZjVCwr7YogIhG-Hogi" target="_blank"><img src="images/books/book1_DontBelieveEverythingYouThink.png" alt="Don't Believe Everything You Think: Why Your Thinking Is The Beginning & End Of Suffering - Joseph Nguyen"></a>
                 <div class="book-content">
                     <h2>Don't Believe Everything You Think: Why Your Thinking Is The Beginning & End Of Suffering - Joseph Nguyen</h2><br>
-                    <p><i>Description.</i></p>
+                    <p>This book is a practical guide that helps you understand how your thoughts shape your emotional experience and overall well-being. It teaches that the stories your mind creates are not objective truth, and that much of your suffering comes from unexamined thinking patterns rather than actual events. The book offers clear explanations of how thoughts influence emotions, behaviors, and habits, and it provides tools to notice, question, and change unhelpful thinking. By learning to separate your identity from your thoughts, you gain emotional clarity, reduce anxiety and self-criticism, and make room for healthier beliefs. This supports self-healing and improvement by encouraging mindful awareness, emotional regulation, and intentional reframing so you can respond to life with greater peace, perspective, and purpose.</p>
                 </div>
             </div>
         </section><br>
 
         <h1>Quotes</h1><br>
-        <p>It ain't what you don't know that gets you into trouble. It's what you know for sure that just ain't so. - Mark Twain</p>
+        <p>It ain't what you don't know that gets you into trouble. It's what you know for sure that just ain't so - Mark Twain</p>
     </main>
 
     <footer>
