--- a/tracklist.html
+++ b/tracklist.html
@@ -35,7 +35,7 @@
             <a href="https://open.spotify.com/album/2jHVzEpvZ8gV5zn5IywmRB" target="_blank"><img src="images/tracks/track1_TheMountainIsYou.png" alt="The Mountain Is You - Chance Peña"></a>
             <div class="track-content">
                 <h2>The Mountain Is You - Chance Peña</h2><br>
-                <p>Description Coming Soon.</p>
+                <p>You are reminded that the biggest thing standing in your way is not the world, other people, or bad luck. It is the fear, doubt, and hesitation you carry inside. When you see yourself as the obstacle, or "The Mountain", you stop waiting for circumstances to change and start changing how you respond. This mindset helps you rebuild by shifting focus from blame to ownership, without turning that ownership into self-punishment. You learn that growth comes from facing discomfort, letting go of what holds you back, and continuing forward even when confidence wavers. By recognizing that you are also the one capable of climbing, you regain control, build self-trust, and turn inner resistance into progress.</p>
             </div>
         </div>
 
@@ -43,7 +43,7 @@
             <a href="https://open.spotify.com/album/0zIb6xazDd72sVT8OtPX3E" target="_blank"><img src="images/tracks/track2_Home.png" alt="Home - Phillip Phillips"></a>
             <div class="track-content">
                 <h2>Home - Phillip Phillips</h2><br>
-                <p>Description Coming Soon.</p>
+                <p>You are encouraged to slow down, breathe, and trust that uncertainty does not mean danger. You are reminded that you do not have to face change alone and that feeling lost is a normal part of moving forward. The mindset this builds is calm resilience. Choose steadiness over panic and reassurance over fear. By focusing on safety, belonging, and patience, you are given space to rebuild without rushing or forcing answers. This helps you heal by quieting anxious thoughts, strengthening emotional stability, and reinforcing that progress often begins with feeling supported and grounded rather than pushed.</p>
             </div>
         </div>
 
@@ -51,7 +51,7 @@
             <a href="https://open.spotify.com/track/2A1FGotEDhN5UjBiLsUwnk" target="_blank"><img src="images/tracks/track3_SleepDeprevation.png" alt="Sleep Deprevation - Chance Peña"></a>
             <div class="track-content">
                 <h2>Sleep Deprevation - Chance Peña</h2><br>
-                <p>Description Coming Soon.</p>
+                <p>You are reminded that feeling exhausted, uncertain, and pulled in different directions does not mean you are failing. It means you are growing. You are encouraged to slow your thinking, ground yourself in the fact that you are still here, and take life in manageable pieces instead of trying to solve everything at once. The mindset this supports is patience over panic and perspective over pressure. By focusing on today, not the entire road ahead, you rebuild confidence, emotional balance, and self-trust. This approach helps you recover by validating struggle while reinforcing that steady effort, reflection, and gratitude are enough to keep you moving forward.</p>
             </div>
         </div>
 
@@ -59,7 +59,7 @@
             <a href="https://open.spotify.com/track/3B7cm8w1IAfOfgQHFvAsft" target="_blank"><img src="images/tracks/track4_KeepItUp.png" alt="Keep It Up - Good Neighbours"></a>
             <div class="track-content">
                 <h2>Keep It Up - Good Neighbours</h2><br>
-                <p>Description Coming Soon.</p>
+                <p>You are encouraged to stop wasting energy on blame and start putting it back into yourself. You are reminded that getting stuck in your head, falling behind, or feeling overwhelmed does not mean you are failing. It means you are human. The mindset here is persistence without perfection. Keep moving, keep trying, and keep showing up even when progress feels small or invisible. You are pushed to take responsibility without self attacking, to accept pressure without letting it crush you, and to choose effort over excuses. This supports rebuilding by reinforcing resilience, self-trust, and forward momentum, especially during ordinary struggles where giving up would be easier than continuing.</p>
             </div>
         </div>
 
