added another description

--- a/tracklist.html
+++ b/tracklist.html
@@ -67,7 +67,7 @@
             <a href="https://open.spotify.com/track/6me7F0aaZjwDo6RJ5MrfBD" target="_blank"><img src="images/tracks/track5_Evergreen.png" alt="Evergreen - Richy Mitch & Thee Coal Miners"></a>
             <div class="track-content">
                 <h2>Evergreen - Richy Mitch & Thee Coal Miners</h2><br>
-                <p>Description Coming Soon.</p>
+                <p>You are encouraged to recognize when you are stuck because of internal resistance rather than external limits. You are shown that feeling trapped often comes from a battle for control inside your own mind, not from a lack of options. By grounding yourself and trusting your inner direction, you begin to move again instead of freezing in place. This mindset supports rebuilding by shifting you from passive waiting to intentional action. When you stop wrestling with yourself and start choosing direction, even small steps restore confidence, momentum, and a sense of personal agency.</p>
             </div>
         </div>
 
