--- a/recommendations.html
+++ b/recommendations.html
@@ -12,7 +12,7 @@
 <body>
 
     <header>
-        <h1>Self Improvement Through Music</h1>
+        <h1><a href="index.html">Self Improvement Through Music</a></h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="tracklist.html">Playlist</a>
