Added videos section to helpful tools page
Added video to section

--- a/help.html
+++ b/help.html
@@ -44,6 +44,16 @@
             </div>
         </section><br><br>
 
+        <section class="videos">
+            <h1>Videos</h1><br>
+            <div class="video">
+                <a href="https://www.youtube.com/watch?v=jMl73_lW5HY" target="_blank"><img src="images/videos/video1_BeatOverthinking.png" alt=""></a>
+                <div class="video-content">
+                    <h2>It took me 3 years to beat overthinking. I'll tell you how to in 5 steps - Clark Kegley</h2><br>
+                </div>
+            </div>
+        </section><br><br>
+
         <h1>Quotes</h1><br>
         <p>It ain't what you don't know that gets you into trouble. It's what you know for sure that just ain't so - Mark Twain</p>
     </main>
