Added more tracks to the playlist page

--- a/tracklist.html
+++ b/tracklist.html
@@ -35,7 +35,7 @@
             <a href="https://open.spotify.com/album/2jHVzEpvZ8gV5zn5IywmRB" target="_blank"><img src="images/tracks/track1_TheMountainIsYou.png" alt="The Mountain Is You - Chance Peña"></a>
             <div class="track-content">
                 <h2>The Mountain Is You - Chance Peña</h2><br>
-                <p>You are reminded that the biggest thing standing in your way is not the world, other people, or bad luck. It is the fear, doubt, and hesitation you carry inside. When you see yourself as the obstacle, or "The Mountain", you stop waiting for circumstances to change and start changing how you respond. This mindset helps you rebuild by shifting focus from blame to ownership, without turning that ownership into self-punishment. You learn that growth comes from facing discomfort, letting go of what holds you back, and continuing forward even when confidence wavers. By recognizing that you are also the one capable of climbing, you regain control, build self-trust, and turn inner resistance into progress.</p>
+                <p>The biggest thing standing in your way is not the world, other people, or bad luck. It is the fear, doubt, and hesitation you carry inside. When you see yourself as the obstacle, or "The Mountain", you stop waiting for circumstances to change and start changing how you respond. This mindset helps you rebuild by shifting focus from blame to ownership, without turning that ownership into self-punishment. You learn that growth comes from facing discomfort, letting go of what holds you back, and continuing forward even when confidence wavers. By recognizing that you are also the one capable of climbing, you regain control, build self-trust, and turn inner resistance into progress.</p>
             </div>
         </div>
 
@@ -43,7 +43,7 @@
             <a href="https://open.spotify.com/album/0zIb6xazDd72sVT8OtPX3E" target="_blank"><img src="images/tracks/track2_Home.png" alt="Home - Phillip Phillips"></a>
             <div class="track-content">
                 <h2>Home - Phillip Phillips</h2><br>
-                <p>You are encouraged to slow down, breathe, and trust that uncertainty does not mean danger. You are reminded that you do not have to face change alone and that feeling lost is a normal part of moving forward. The mindset this builds is calm resilience. Choose steadiness over panic and reassurance over fear. By focusing on safety, belonging, and patience, you are given space to rebuild without rushing or forcing answers. This helps you heal by quieting anxious thoughts, strengthening emotional stability, and reinforcing that progress often begins with feeling supported and grounded rather than pushed.</p>
+                <p>Slow down. Breathe. Trust that uncertainty does not mean danger. You are reminded that you do not have to face change alone and that feeling lost is a normal part of moving forward. The mindset this builds is calm resilience. Choose steadiness over panic and reassurance over fear. By focusing on safety, belonging, and patience, you are given space to rebuild without rushing or forcing answers. This helps you heal by quieting anxious thoughts, strengthening emotional stability, and reinforcing that progress often begins with feeling supported and grounded rather than pushed.</p>
             </div>
         </div>
 
@@ -51,7 +51,7 @@
             <a href="https://open.spotify.com/track/2A1FGotEDhN5UjBiLsUwnk" target="_blank"><img src="images/tracks/track3_SleepDeprevation.png" alt="Sleep Deprevation - Chance Peña"></a>
             <div class="track-content">
                 <h2>Sleep Deprevation - Chance Peña</h2><br>
-                <p>You are reminded that feeling exhausted, uncertain, and pulled in different directions does not mean you are failing. It means you are growing. You are encouraged to slow your thinking, ground yourself in the fact that you are still here, and take life in manageable pieces instead of trying to solve everything at once. The mindset this supports is patience over panic and perspective over pressure. By focusing on today, not the entire road ahead, you rebuild confidence, emotional balance, and self-trust. This approach helps you recover by validating struggle while reinforcing that steady effort, reflection, and gratitude are enough to keep you moving forward.</p>
+                <p>Feeling exhausted, uncertain, and pulled in different directions does not mean you are failing. It means you are growing. Slow your thinking and round yourself in the fact that you are still here. Take life in manageable pieces instead of trying to solve everything at once. By focusing on today, and not the entire road ahead, you rebuild confidence, emotional balance, and self-trust.</p>
             </div>
         </div>
 
@@ -59,7 +59,7 @@
             <a href="https://open.spotify.com/track/3B7cm8w1IAfOfgQHFvAsft" target="_blank"><img src="images/tracks/track4_KeepItUp.png" alt="Keep It Up - Good Neighbours"></a>
             <div class="track-content">
                 <h2>Keep It Up - Good Neighbours</h2><br>
-                <p>You are encouraged to stop wasting energy on blame and start putting it back into yourself. You are reminded that getting stuck in your head, falling behind, or feeling overwhelmed does not mean you are failing. It means you are human. The mindset here is persistence without perfection. Keep moving, keep trying, and keep showing up even when progress feels small or invisible. You are pushed to take responsibility without self attacking, to accept pressure without letting it crush you, and to choose effort over excuses. This supports rebuilding by reinforcing resilience, self-trust, and forward momentum, especially during ordinary struggles where giving up would be easier than continuing.</p>
+                <p>Stop wasting energy on blame and start putting it back into yourself. Getting stuck in your head, falling behind, or feeling overwhelmed does not mean you are failing. It means you are human. Keep moving. Keep trying. Kkeep showing up, even when progress feels small or invisible. Take responsibility without self attacking. Accept pressure without letting it crush you. Choose effort over excuses.</p>
             </div>
         </div>
 
@@ -67,7 +67,7 @@
             <a href="https://open.spotify.com/track/6me7F0aaZjwDo6RJ5MrfBD" target="_blank"><img src="images/tracks/track5_Evergreen.png" alt="Evergreen - Richy Mitch & Thee Coal Miners"></a>
             <div class="track-content">
                 <h2>Evergreen - Richy Mitch & Thee Coal Miners</h2><br>
-                <p>You are encouraged to recognize when you are stuck because of internal resistance rather than external limits. You are shown that feeling trapped often comes from a battle for control inside your own mind, not from a lack of options. By grounding yourself and trusting your inner direction, you begin to move again instead of freezing in place. This mindset supports rebuilding by shifting you from passive waiting to intentional action. When you stop wrestling with yourself and start choosing direction, even small steps restore confidence, momentum, and a sense of personal agency.</p>
+                <p>Recognize when you are stuck because of internal resistance rather than external limits. Feeling trapped often comes from a battle for control inside your own mind, not from a lack of options. By grounding yourself and trusting your inner direction, you begin to move again instead of freezing in place. This mindset supports rebuilding by shifting you from passive waiting to intentional action. When you stop wrestling with yourself and start choosing direction, even small steps restore confidence, momentum, and a sense of personal agency.</p>
             </div>
         </div>
 
@@ -75,7 +75,7 @@
             <a href="https://open.spotify.com/track/0pqnGHJpmpxLKifKRmU6WP" target="_blank"><img src="images/tracks/track6_Believer.png" alt="Believer - Imagine Dragons"></a>
             <div class="track-content">
                 <h2>Believer - Imagine Dragons</h2><br>
-                <p>Description Coming Soon.</p>
+                <p>Face hardship head on and stop letting the past define you. Take ownership of your life, your choices, and your future. You stop waiting for permission, stop letting others decide who you are, and start steering your own direction. Pain is not something to avoid. Tt is something to use. Every setback, rejection, and failure becomes fuel that strengthens you instead of breaking you. When you accept that struggle is part of growth, you rebuild yourself with purpose. Learn from what hurt you. Turn frustration into focus. Transform doubt into drive. Believe in yourself and keep moving forward even when it's uncomfortable. If you commit to this mindset, you come out stronger, clearer, and more determined to become the best version of yourself.</p>
             </div>
         </div>
 
@@ -83,7 +83,7 @@
             <a href="https://open.spotify.com/track/6Qn5zhYkTa37e91HC1D7lb" target="_blank"><img src="images/tracks/track7_WhateverItTakes.png" alt="Whatever It Takes - Imagine Dragons"></a>
             <div class="track-content">
                 <h2>Whatever It Takes - Imagine Dragons</h2><br>
-                <p>Description Coming Soon.</p>
+                <p>The world is loud, critical, and ready to doubt you, but you are not here to shrink or wait for approval. You are here to do whatever it takes and push through discomfort. Fear, pressure, and exhaustion are not warnings to stop; they are signs that you are breaking limits. Embrace challenge instead of avoiding it, to accept being uncomfortable if it means becoming stronger. You stop chasing perfection and start chasing progress. You understand that growth requires being tested, reshaped, and sometimes broken down so you can rebuild better. You choose effort over excuses and action over fear. When you commit fully, stop playing small, and decide to do what it takes, you build confidence, resilience, and purpose. You become someone who does not quit when things get hard, but rises because they are hard.</p>
             </div>
         </div>
 
